dotnet/versioned_docs/version-1.24/api/class-browsercontext.mdx
---
id: class-browsercontext
title: "BrowserContext"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

* extends: [EventEmitter]

BrowserContexts provide a way to operate multiple independent browser sessions.

If a page opens another page, e.g. with a `window.open` call, the popup will belong to the parent page's browser context.

Playwright allows creating "incognito" browser contexts with [Browser.NewContextAsync(options)](./api/class-browser.mdx#browser-new-context) method. "Incognito" browser contexts don't write any browsing data to disk.

```csharp
using var playwright = await Playwright.CreateAsync();
var browser = await playwright.Firefox.LaunchAsync(new BrowserTypeLaunchOptions { Headless = false });
// Create a new incognito browser context
var context = await browser.NewContextAsync();
// Create a new page inside context.
var page = await context.NewPageAsync();
await page.GotoAsync("https://bing.com");
// Dispose context once it is no longer needed.
await context.CloseAsync();
```


- [event BrowserContext.Close](./api/class-browsercontext.mdx#browser-context-event-close)
- [event BrowserContext.Page](./api/class-browsercontext.mdx#browser-context-event-page)
- [event BrowserContext.Request](./api/class-browsercontext.mdx#browser-context-event-request)
- [event BrowserContext.RequestFailed](./api/class-browsercontext.mdx#browser-context-event-request-failed)
- [event BrowserContext.RequestFinished](./api/class-browsercontext.mdx#browser-context-event-request-finished)
- [event BrowserContext.Response](./api/class-browsercontext.mdx#browser-context-event-response)
- [BrowserContext.AddCookiesAsync(cookies)](./api/class-browsercontext.mdx#browser-context-add-cookies)
- [BrowserContext.AddInitScriptAsync(script)](./api/class-browsercontext.mdx#browser-context-add-init-script)
- [BrowserContext.Browser](./api/class-browsercontext.mdx#browser-context-browser)
- [BrowserContext.ClearCookiesAsync()](./api/class-browsercontext.mdx#browser-context-clear-cookies)
- [BrowserContext.ClearPermissionsAsync()](./api/class-browsercontext.mdx#browser-context-clear-permissions)
- [BrowserContext.CloseAsync()](./api/class-browsercontext.mdx#browser-context-close)
- [BrowserContext.CookiesAsync(urls)](./api/class-browsercontext.mdx#browser-context-cookies)
- [BrowserContext.ExposeBindingAsync(name, callback, options)](./api/class-browsercontext.mdx#browser-context-expose-binding)
- [BrowserContext.ExposeFunctionAsync(name, callback)](./api/class-browsercontext.mdx#browser-context-expose-function)
- [BrowserContext.GrantPermissionsAsync(permissions, options)](./api/class-browsercontext.mdx#browser-context-grant-permissions)
- [BrowserContext.NewPageAsync()](./api/class-browsercontext.mdx#browser-context-new-page)
- [BrowserContext.Pages](./api/class-browsercontext.mdx#browser-context-pages)
- [BrowserContext.RouteAsync(url, handler, options)](./api/class-browsercontext.mdx#browser-context-route)
- [BrowserContext.RouteFromHARAsync(har, options)](./api/class-browsercontext.mdx#browser-context-route-from-har)
- [BrowserContext.RunAndWaitForPageAsync(action, options)](./api/class-browsercontext.mdx#browser-context-wait-for-page)
- [BrowserContext.SetDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout)
- [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout)
- [BrowserContext.SetExtraHTTPHeadersAsync(headers)](./api/class-browsercontext.mdx#browser-context-set-extra-http-headers)
- [BrowserContext.SetGeolocationAsync(geolocation)](./api/class-browsercontext.mdx#browser-context-set-geolocation)
- [BrowserContext.SetOfflineAsync(offline)](./api/class-browsercontext.mdx#browser-context-set-offline)
- [BrowserContext.StorageStateAsync(options)](./api/class-browsercontext.mdx#browser-context-storage-state)
- [BrowserContext.UnrouteAsync(url, handler)](./api/class-browsercontext.mdx#browser-context-unroute)
- [BrowserContext.WaitForPageAsync(action, options)](./api/class-browsercontext.mdx#browser-context-wait-for-page)
- [BrowserContext.APIRequest](./api/class-browsercontext.mdx#browser-context-request)
- [BrowserContext.Tracing](./api/class-browsercontext.mdx#browser-context-tracing)

## event BrowserContext.Close {#browser-context-event-close}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- type: &#60;[BrowserContext]&#62;

Emitted when Browser context gets closed. This might happen because of one of the following:
* Browser context is closed.
* Browser application is closed or crashed.
* The [Browser.CloseAsync()](./api/class-browser.mdx#browser-close) method was called.

## event BrowserContext.Page {#browser-context-event-page}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- type: &#60;[Page]&#62;

The event is emitted when a new Page is created in the BrowserContext. The page may still be loading. The event will also fire for popup pages. See also [event Page.Popup](./api/class-page.mdx#page-event-popup) to receive events about popups relevant to a specific page.

The earliest moment that page is available is when it has navigated to the initial url. For example, when opening a popup with `window.open('http://example.com')`, this event will fire when the network request to "http://example.com" is done and its response has started loading in the popup.

```csharp
var popup = await context.RunAndWaitForPageAsync(async =>
{
    await page.Locator("a").ClickAsync();
});
Console.WriteLine(await popup.EvaluateAsync<string>("location.href"));
```

:::note
Use [Page.WaitForLoadStateAsync(state, options)](./api/class-page.mdx#page-wait-for-load-state) to wait until the page gets to a particular state (you should not need it in most cases).
:::

## event BrowserContext.Request {#browser-context-event-request}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.12</font>

- type: &#60;[Request]&#62;

Emitted when a request is issued from any pages created through this context. The [request] object is read-only. To only listen for requests from a particular page, use [event Page.Request](./api/class-page.mdx#page-event-request).

In order to intercept and mutate requests, see [BrowserContext.RouteAsync(url, handler, options)](./api/class-browsercontext.mdx#browser-context-route) or [Page.RouteAsync(url, handler, options)](./api/class-page.mdx#page-route).

## event BrowserContext.RequestFailed {#browser-context-event-request-failed}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.12</font>

- type: &#60;[Request]&#62;

Emitted when a request fails, for example by timing out. To only listen for failed requests from a particular page, use [event Page.RequestFailed](./api/class-page.mdx#page-event-request-failed).

:::note
HTTP Error responses, such as 404 or 503, are still successful responses from HTTP standpoint, so request will complete with [event BrowserContext.RequestFinished](./api/class-browsercontext.mdx#browser-context-event-request-finished) event and not with [event BrowserContext.RequestFailed](./api/class-browsercontext.mdx#browser-context-event-request-failed).
:::

## event BrowserContext.RequestFinished {#browser-context-event-request-finished}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.12</font>

- type: &#60;[Request]&#62;

Emitted when a request finishes successfully after downloading the response body. For a successful response, the sequence of events is `request`, `response` and `requestfinished`. To listen for successful requests from a particular page, use [event Page.RequestFinished](./api/class-page.mdx#page-event-request-finished).

## event BrowserContext.Response {#browser-context-event-response}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.12</font>

- type: &#60;[Response]&#62;

Emitted when [response] status and headers are received for a request. For a successful response, the sequence of events is `request`, `response` and `requestfinished`. To listen for response events from a particular page, use [event Page.Response](./api/class-page.mdx#page-event-response).

## BrowserContext.AddCookiesAsync(cookies) {#browser-context-add-cookies}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `cookies`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-add-cookies-option-cookies"/> &#60;[IEnumerable]<`Cookie`>&#62;<a href="#browser-context-add-cookies-option-cookies" class="list-anchor">#</a>
  - `Name` &#60;[string]&#62;
  - `Value` &#60;[string]&#62;
  - `Url` &#60;[string]?&#62; either url or domain / path are required. Optional.
  - `Domain` &#60;[string]?&#62; either url or domain / path are required Optional.
  - `Path` &#60;[string]?&#62; either url or domain / path are required Optional.
  - `Expires` &#60;[double]?&#62; Unix time in seconds. Optional.
  - `HttpOnly` &#60;[bool]?&#62; Optional.
  - `Secure` &#60;[bool]?&#62; Optional.
  - `SameSite` &#60;`enum SameSiteAttribute { Strict, Lax, None }?`&#62; Optional.
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-add-cookies-return"/> &#60;[void]&#62;<a href="#browser-context-add-cookies-return" class="list-anchor">#</a>

Adds cookies into this browser context. All pages within this context will have these cookies installed. Cookies can be obtained via [BrowserContext.CookiesAsync(urls)](./api/class-browsercontext.mdx#browser-context-cookies).

```csharp
await context.AddCookiesAsync(new[] { cookie1, cookie2 });
```

## BrowserContext.AddInitScriptAsync(script) {#browser-context-add-init-script}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `script`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-add-init-script-option-script"/> &#60;[string]|[string]&#62; Script to be evaluated in all pages in the browser context.<a href="#browser-context-add-init-script-option-script" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-add-init-script-return"/> &#60;[void]&#62;<a href="#browser-context-add-init-script-return" class="list-anchor">#</a>

Adds a script which would be evaluated in one of the following scenarios:
* Whenever a page is created in the browser context or is navigated.
* Whenever a child frame is attached or navigated in any page in the browser context. In this case, the script is evaluated in the context of the newly attached frame.

The script is evaluated after the document was created but before any of its scripts were run. This is useful to amend the JavaScript environment, e.g. to seed `Math.random`.

An example of overriding `Math.random` before the page loads:

```js
// preload.js
Math.random = () => 42;
```

```csharp
await context.AddInitScriptAsync(new BrowserContextAddInitScriptOptions { ScriptPath = "preload.js" });
```

:::note
The order of evaluation of multiple scripts installed via [BrowserContext.AddInitScriptAsync(script)](./api/class-browsercontext.mdx#browser-context-add-init-script) and [Page.AddInitScriptAsync(script)](./api/class-page.mdx#page-add-init-script) is not defined.
:::

## BrowserContext.Browser {#browser-context-browser}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-browser-return"/> &#60;[Browser]?&#62;<a href="#browser-context-browser-return" class="list-anchor">#</a>

Returns the browser instance of the context. If it was launched as a persistent context null gets returned.

## BrowserContext.ClearCookiesAsync() {#browser-context-clear-cookies}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-clear-cookies-return"/> &#60;[void]&#62;<a href="#browser-context-clear-cookies-return" class="list-anchor">#</a>

Clears context cookies.

## BrowserContext.ClearPermissionsAsync() {#browser-context-clear-permissions}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-clear-permissions-return"/> &#60;[void]&#62;<a href="#browser-context-clear-permissions-return" class="list-anchor">#</a>

Clears all permission overrides for the browser context.

```csharp
var context = await browser.NewContextAsync();
await context.GrantPermissionsAsync(new[] { "clipboard-read" });
// Alternatively, you can use the helper class ContextPermissions
//  to specify the permissions...
// do stuff ...
await context.ClearPermissionsAsync();
```

## BrowserContext.CloseAsync() {#browser-context-close}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-close-return"/> &#60;[void]&#62;<a href="#browser-context-close-return" class="list-anchor">#</a>

Closes the browser context. All the pages that belong to the browser context will be closed.

:::note
The default browser context cannot be closed.
:::

## BrowserContext.CookiesAsync(urls) {#browser-context-cookies}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `urls`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-cookies-option-urls"/> &#60;[string]?|[IEnumerable]?<[string]>&#62; Optional list of URLs.<a href="#browser-context-cookies-option-urls" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-cookies-return"/> &#60;[IEnumerable]<`Cookie`>&#62;<a href="#browser-context-cookies-return" class="list-anchor">#</a>
  - `name` &#60;[string]&#62;
  - `value` &#60;[string]&#62;
  - `domain` &#60;[string]&#62;
  - `path` &#60;[string]&#62;
  - `expires` &#60;[double]&#62; Unix time in seconds.
  - `httpOnly` &#60;[bool]&#62;
  - `secure` &#60;[bool]&#62;
  - `sameSite` &#60;`enum SameSiteAttribute { Strict, Lax, None }`&#62;

If no URLs are specified, this method returns all cookies. If URLs are specified, only cookies that affect those URLs are returned.

## BrowserContext.ExposeBindingAsync(name, callback, options) {#browser-context-expose-binding}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-binding-option-name"/> &#60;[string]&#62; Name of the function on the window object.<a href="#browser-context-expose-binding-option-name" class="list-anchor">#</a>
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-binding-option-callback"/> &#60;[Action]<BindingSource, T, [TResult]>&#62; Callback function that will be called in the Playwright's context.<a href="#browser-context-expose-binding-option-callback" class="list-anchor">#</a>
- `options` &#60;`BrowserContextExposeBindingOptions?`&#62;
  - `Handle`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-binding-option-handle"/> &#60;[bool]?&#62; Whether to pass the argument as a handle, instead of passing by value. When passing a handle, only one argument is supported. When passing by value, multiple arguments are supported.<a href="#browser-context-expose-binding-option-handle" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-binding-return"/> &#60;[void]&#62;<a href="#browser-context-expose-binding-return" class="list-anchor">#</a>

The method adds a function called `name` on the `window` object of every frame in every page in the context. When called, the function executes `callback` and returns a [Promise] which resolves to the return value of `callback`. If the `callback` returns a [Promise], it will be awaited.

The first argument of the `callback` function contains information about the caller: `{ browserContext: BrowserContext, page: Page, frame: Frame }`.

See [Page.ExposeBindingAsync(name, callback, options)](./api/class-page.mdx#page-expose-binding) for page-only version.

An example of exposing page URL to all frames in all pages in the context:

```csharp
using Microsoft.Playwright;

using var playwright = await Playwright.CreateAsync();
var browser = await playwright.Webkit.LaunchAsync(new BrowserTypeLaunchOptions { Headless = false });
var context = await browser.NewContextAsync();

await context.ExposeBindingAsync("pageURL", source => source.Page.Url);
var page = await context.NewPageAsync();
await page.SetContentAsync("<script>\n" +
"  async function onClick() {\n" +
"    document.querySelector('div').textContent = await window.pageURL();\n" +
"  }\n" +
"</script>\n" +
"<button onclick=\"onClick()\">Click me</button>\n" +
"<div></div>");
await page.Locator("button").ClickAsync();
```

An example of passing an element handle:

```csharp
var result = new TaskCompletionSource<string>();
var page = await Context.NewPageAsync();
await Context.ExposeBindingAsync("clicked", async (BindingSource _, IJSHandle t) =>
{
    return result.TrySetResult(await t.AsElement().TextContentAsync());
});

await page.SetContentAsync("<script>\n" +
  "  document.addEventListener('click', event => window.clicked(event.target));\n" +
  "</script>\n" +
  "<div>Click me</div>\n" +
  "<div>Or click me</div>\n");

await page.ClickAsync("div");
// Note: it makes sense to await the result here, because otherwise, the context
//  gets closed and the binding function will throw an exception.
Assert.AreEqual("Click me", await result.Task);
```

## BrowserContext.ExposeFunctionAsync(name, callback) {#browser-context-expose-function}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-function-option-name"/> &#60;[string]&#62; Name of the function on the window object.<a href="#browser-context-expose-function-option-name" class="list-anchor">#</a>
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-function-option-callback"/> &#60;[Action]<T, [TResult]>&#62; Callback function that will be called in the Playwright's context.<a href="#browser-context-expose-function-option-callback" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-function-return"/> &#60;[void]&#62;<a href="#browser-context-expose-function-return" class="list-anchor">#</a>

The method adds a function called `name` on the `window` object of every frame in every page in the context. When called, the function executes `callback` and returns a [Promise] which resolves to the return value of `callback`.

If the `callback` returns a [Promise], it will be awaited.

See [Page.ExposeFunctionAsync(name, callback)](./api/class-page.mdx#page-expose-function) for page-only version.

An example of adding a `sha256` function to all pages in the context:

```csharp
using Microsoft.Playwright;
using System;
using System.Security.Cryptography;
using System.Threading.Tasks;

class BrowserContextExamples
{
    public static async Task Main()
    {
        using var playwright = await Playwright.CreateAsync();
        var browser = await playwright.Webkit.LaunchAsync(new BrowserTypeLaunchOptions { Headless = false });
        var context = await browser.NewContextAsync();

        await context.ExposeFunctionAsync("sha256", (string input) =>
        {
            return Convert.ToBase64String(
                SHA256.Create().ComputeHash(System.Text.Encoding.UTF8.GetBytes(input)));
        });

        var page = await context.NewPageAsync();
        await page.SetContentAsync("<script>\n" +
        "  async function onClick() {\n" +
        "    document.querySelector('div').textContent = await window.sha256('PLAYWRIGHT');\n" +
        "  }\n" +
        "</script>\n" +
        "<button onclick=\"onClick()\">Click me</button>\n" +
        "<div></div>");

        await page.Locator("button").ClickAsync();
        Console.WriteLine(await page.TextContentAsync("div"));
    }
}
```

## BrowserContext.GrantPermissionsAsync(permissions, options) {#browser-context-grant-permissions}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `permissions`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-grant-permissions-option-permissions"/> &#60;[IEnumerable]<[string]>&#62; A permission or an array of permissions to grant. Permissions can be one of the following values:<a href="#browser-context-grant-permissions-option-permissions" class="list-anchor">#</a>
  * `'geolocation'`
  * `'midi'`
  * `'midi-sysex'` (system-exclusive midi)
  * `'notifications'`
  * `'camera'`
  * `'microphone'`
  * `'background-sync'`
  * `'ambient-light-sensor'`
  * `'accelerometer'`
  * `'gyroscope'`
  * `'magnetometer'`
  * `'accessibility-events'`
  * `'clipboard-read'`
  * `'clipboard-write'`
  * `'payment-handler'`
- `options` &#60;`BrowserContextGrantPermissionsOptions?`&#62;
  - `Origin`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-grant-permissions-option-origin"/> &#60;[string]?&#62; The [origin] to grant permissions to, e.g. "https://example.com".<a href="#browser-context-grant-permissions-option-origin" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-grant-permissions-return"/> &#60;[void]&#62;<a href="#browser-context-grant-permissions-return" class="list-anchor">#</a>

Grants specified permissions to the browser context. Only grants corresponding permissions to the given origin if specified.

## BrowserContext.NewPageAsync() {#browser-context-new-page}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-new-page-return"/> &#60;[Page]&#62;<a href="#browser-context-new-page-return" class="list-anchor">#</a>

Creates a new page in the browser context.

## BrowserContext.Pages {#browser-context-pages}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-pages-return"/> &#60;[IEnumerable]<[Page]>&#62;<a href="#browser-context-pages-return" class="list-anchor">#</a>

Returns all open pages in the context.

## BrowserContext.RouteAsync(url, handler, options) {#browser-context-route}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `url`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-option-url"/> &#60;[string]|[Regex]|[Func]<[string], bool>&#62; A glob pattern, regex pattern or predicate receiving [URL] to match while routing. When a `baseURL` via the context options was provided and the passed URL is a path, it gets merged via the [`new URL()`](https://developer.mozilla.org/en-US/docs/Web/API/URL/URL) constructor.<a href="#browser-context-route-option-url" class="list-anchor">#</a>
- `handler`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-option-handler"/> &#60;[Action]<[Route]>&#62; handler function to route the request.<a href="#browser-context-route-option-handler" class="list-anchor">#</a>
- `options` &#60;`BrowserContextRouteOptions?`&#62;
  - `Times`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-option-times"/> &#60;[int]?&#62; How often a route should be used. By default it will be used every time. <font size="2">Added in: v1.15</font><a href="#browser-context-route-option-times" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-return"/> &#60;[void]&#62;<a href="#browser-context-route-return" class="list-anchor">#</a>

Routing provides the capability to modify network requests that are made by any page in the browser context. Once route is enabled, every request matching the url pattern will stall unless it's continued, fulfilled or aborted.

:::note
[BrowserContext.RouteAsync(url, handler, options)](./api/class-browsercontext.mdx#browser-context-route) will not intercept requests intercepted by Service Worker. See [this](https://github.com/microsoft/playwright/issues/1090) issue. We recommend disabling Service Workers when using request interception by setting `Browser.newContext.serviceWorkers` to `'block'`.
:::

An example of a naive handler that aborts all image requests:

```csharp
var context = await browser.NewContextAsync();
var page = await context.NewPageAsync();
await context.RouteAsync("**/*.{png,jpg,jpeg}", r => r.AbortAsync());
await page.GotoAsync("https://theverge.com");
await browser.CloseAsync();
```

or the same snippet using a regex pattern instead:

```csharp
var context = await browser.NewContextAsync();
var page = await context.NewPageAsync();
await context.RouteAsync(new Regex("(\\.png$)|(\\.jpg$)"), r => r.AbortAsync());
await page.GotoAsync("https://theverge.com");
await browser.CloseAsync();
```

It is possible to examine the request to decide the route action. For example, mocking all requests that contain some post data, and leaving all other requests as is:

```csharp
await page.RouteAsync("/api/**", async r =>
{
    if (r.Request.PostData.Contains("my-string"))
        await r.FulfillAsync(body: "mocked-data");
    else
        await r.ContinueAsync();
});
```

Page routes (set up with [Page.RouteAsync(url, handler, options)](./api/class-page.mdx#page-route)) take precedence over browser context routes when request matches both handlers.

To remove a route with its handler you can use [BrowserContext.UnrouteAsync(url, handler)](./api/class-browsercontext.mdx#browser-context-unroute).

:::note
Enabling routing disables http cache.
:::

## BrowserContext.RouteFromHARAsync(har, options) {#browser-context-route-from-har}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.23</font>

- `har`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-from-har-option-har"/> &#60;[string]&#62; Path to a [HAR](http://www.softwareishard.com/blog/har-12-spec) file with prerecorded network data. If `path` is a relative path, then it is resolved relative to the current working directory.<a href="#browser-context-route-from-har-option-har" class="list-anchor">#</a>
- `options` &#60;`BrowserContextRouteFromHAROptions?`&#62;
  - `NotFound`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-from-har-option-not-found"/> &#60;`enum HarNotFound { Abort, Fallback }?`&#62; If set to 'abort' any request not found in the HAR file will be aborted.<a href="#browser-context-route-from-har-option-not-found" class="list-anchor">#</a>
    * If set to 'fallback' falls through to the next route handler in the handler chain.

    Defaults to abort.
  - `Update`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-from-har-option-update"/> &#60;[bool]?&#62; If specified, updates the given HAR with the actual network information instead of serving from file.<a href="#browser-context-route-from-har-option-update" class="list-anchor">#</a>
  - `Url`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-from-har-option-url"/> &#60;[string]?|[Regex]?&#62; A glob pattern, regular expression or predicate to match the request URL. Only requests with URL matching the pattern will be served from the HAR file. If not specified, all requests are served from the HAR file.<a href="#browser-context-route-from-har-option-url" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-from-har-return"/> &#60;[void]&#62;<a href="#browser-context-route-from-har-return" class="list-anchor">#</a>

If specified the network requests that are made in the context will be served from the HAR file. Read more about [Replaying from HAR](../network.mdx#replaying-from-har).

Playwright will not serve requests intercepted by Service Worker from the HAR file. See [this](https://github.com/microsoft/playwright/issues/1090) issue. We recommend disabling Service Workers when using request interception by setting `Browser.newContext.serviceWorkers` to `'block'`.

## BrowserContext.RunAndWaitForPageAsync(action, options) {#browser-context-wait-for-page}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.9</font>

- `options` &#60;`BrowserContextRunAndWaitForPageOptions?`&#62;
  - `Predicate`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-page-option-predicate"/> &#60;[Func]<[Page]?, bool>&#62; Receives the [Page] object and resolves to truthy value when the waiting should resolve.<a href="#browser-context-wait-for-page-option-predicate" class="list-anchor">#</a>
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-page-option-timeout"/> &#60;[double]?&#62; Maximum time to wait for in milliseconds. Defaults to `30000` (30 seconds). Pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout).<a href="#browser-context-wait-for-page-option-timeout" class="list-anchor">#</a>
- `action`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-page-option-action"/> &#60;[Func]<[Task]>&#62; Action that triggers the event. <font size="2">Added in: v1.12</font><a href="#browser-context-wait-for-page-option-action" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-page-return"/> &#60;[Page]&#62;<a href="#browser-context-wait-for-page-return" class="list-anchor">#</a>

Performs action and waits for a new [Page] to be created in the context. If predicate is provided, it passes [Page] value into the `predicate` function and waits for `predicate(event)` to return a truthy value. Will throw an error if the context closes before new [Page] is created.

## BrowserContext.WaitForPageAsync(action, options) {#browser-context-wait-for-page}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.9</font>

- `action`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-page-option-action"/> &#60;[Func]<[Task]>&#62; Action that triggers the event. <font size="2">Added in: v1.12</font><a href="#browser-context-wait-for-page-option-action" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-page-return"/> &#60;[Page]&#62;<a href="#browser-context-wait-for-page-return" class="list-anchor">#</a>

Performs action and waits for a new [Page] to be created in the context. If predicate is provided, it passes [Page] value into the `predicate` function and waits for `predicate(event)` to return a truthy value. Will throw an error if the context closes before new [Page] is created.

## BrowserContext.SetDefaultNavigationTimeout(timeout) {#browser-context-set-default-navigation-timeout}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-default-navigation-timeout-option-timeout"/> &#60;[double]&#62; Maximum navigation time in milliseconds<a href="#browser-context-set-default-navigation-timeout-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-default-navigation-timeout-return"/> &#60;[void]&#62;<a href="#browser-context-set-default-navigation-timeout-return" class="list-anchor">#</a>

This setting will change the default maximum navigation time for the following methods and related shortcuts:
* [Page.GoBackAsync(options)](./api/class-page.mdx#page-go-back)
* [Page.GoForwardAsync(options)](./api/class-page.mdx#page-go-forward)
* [Page.GotoAsync(url, options)](./api/class-page.mdx#page-goto)
* [Page.ReloadAsync(options)](./api/class-page.mdx#page-reload)
* [Page.SetContentAsync(html, options)](./api/class-page.mdx#page-set-content)
* [Page.RunAndWaitForNavigationAsync(action, options)](./api/class-page.mdx#page-wait-for-navigation)

:::note
[Page.SetDefaultNavigationTimeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) and [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) take priority over [BrowserContext.SetDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout).
:::

## BrowserContext.SetDefaultTimeout(timeout) {#browser-context-set-default-timeout}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-default-timeout-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds<a href="#browser-context-set-default-timeout-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-default-timeout-return"/> &#60;[void]&#62;<a href="#browser-context-set-default-timeout-return" class="list-anchor">#</a>

This setting will change the default maximum time for all the methods accepting `timeout` option.

:::note
[Page.SetDefaultNavigationTimeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout), [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) and [BrowserContext.SetDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout) take priority over [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout).
:::

## BrowserContext.SetExtraHTTPHeadersAsync(headers) {#browser-context-set-extra-http-headers}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `headers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-extra-http-headers-option-headers"/> &#60;[IDictionary]<[string], [string]>&#62; An object containing additional HTTP headers to be sent with every request. All header values must be strings.<a href="#browser-context-set-extra-http-headers-option-headers" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-extra-http-headers-return"/> &#60;[void]&#62;<a href="#browser-context-set-extra-http-headers-return" class="list-anchor">#</a>

The extra HTTP headers will be sent with every request initiated by any page in the context. These headers are merged with page-specific extra HTTP headers set with [Page.SetExtraHTTPHeadersAsync(headers)](./api/class-page.mdx#page-set-extra-http-headers). If page overrides a particular header, page-specific header value will be used instead of the browser context header value.

:::note
[BrowserContext.SetExtraHTTPHeadersAsync(headers)](./api/class-browsercontext.mdx#browser-context-set-extra-http-headers) does not guarantee the order of headers in the outgoing requests.
:::

## BrowserContext.SetGeolocationAsync(geolocation) {#browser-context-set-geolocation}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `geolocation`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-geolocation-option-geolocation"/> &#60;Geolocation?&#62;<a href="#browser-context-set-geolocation-option-geolocation" class="list-anchor">#</a>
  - `Latitude` &#60;[double]&#62; Latitude between -90 and 90.
  - `Longitude` &#60;[double]&#62; Longitude between -180 and 180.
  - `Accuracy` &#60;[double]?&#62; Non-negative accuracy value. Defaults to `0`.
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-geolocation-return"/> &#60;[void]&#62;<a href="#browser-context-set-geolocation-return" class="list-anchor">#</a>

Sets the context's geolocation. Passing `null` or `undefined` emulates position unavailable.

```csharp
await context.SetGeolocationAsync(new Geolocation()
{
    Latitude = 59.95f,
    Longitude = 30.31667f
});
```

:::note
Consider using [BrowserContext.GrantPermissionsAsync(permissions, options)](./api/class-browsercontext.mdx#browser-context-grant-permissions) to grant permissions for the browser context pages to read its geolocation.
:::

## BrowserContext.SetOfflineAsync(offline) {#browser-context-set-offline}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `offline`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-offline-option-offline"/> &#60;[bool]&#62; Whether to emulate network being offline for the browser context.<a href="#browser-context-set-offline-option-offline" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-offline-return"/> &#60;[void]&#62;<a href="#browser-context-set-offline-return" class="list-anchor">#</a>

## BrowserContext.StorageStateAsync(options) {#browser-context-storage-state}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `options` &#60;`BrowserContextStorageStateOptions?`&#62;
  - `Path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-storage-state-option-path"/> &#60;[string]?&#62; The file path to save the storage state to. If `path` is a relative path, then it is resolved relative to current working directory. If no path is provided, storage state is still returned, but won't be saved to the disk.<a href="#browser-context-storage-state-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-storage-state-return"/> &#60;[string]&#62;<a href="#browser-context-storage-state-return" class="list-anchor">#</a>

Returns storage state for this browser context, contains current cookies and local storage snapshot.

## BrowserContext.UnrouteAsync(url, handler) {#browser-context-unroute}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.8</font>

- `url`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-unroute-option-url"/> &#60;[string]|[Regex]|[Func]<[string], bool>&#62; A glob pattern, regex pattern or predicate receiving [URL] used to register a routing with [BrowserContext.RouteAsync(url, handler, options)](./api/class-browsercontext.mdx#browser-context-route).<a href="#browser-context-unroute-option-url" class="list-anchor">#</a>
- `handler`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-unroute-option-handler"/> &#60;[Action]<[Route]?>&#62; Optional handler function used to register a routing with [BrowserContext.RouteAsync(url, handler, options)](./api/class-browsercontext.mdx#browser-context-route).<a href="#browser-context-unroute-option-handler" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-unroute-return"/> &#60;[void]&#62;<a href="#browser-context-unroute-return" class="list-anchor">#</a>

Removes a route created with [BrowserContext.RouteAsync(url, handler, options)](./api/class-browsercontext.mdx#browser-context-route). When `handler` is not specified, removes all routes for the `url`.

## BrowserContext.APIRequest {#browser-context-request}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.16</font>

- type: &#60;[APIRequestContext]&#62;

API testing helper associated with this context. Requests made with this API will use context cookies.

## BrowserContext.Tracing {#browser-context-tracing}

<font size="2" style={{position: "relative", top: "-20px"}}>Added in: v1.12</font>

- type: &#60;[Tracing]&#62;

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[FormData]: ./api/class-formdata.mdx "FormData"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./test-assertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./test-assertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./test-assertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[bool]: https://docs.microsoft.com/en-us/dotnet/api/system.boolean "bool"
[double]: https://docs.microsoft.com/en-us/dotnet/api/system.double "double"
[byte]: https://docs.microsoft.com/en-us/dotnet/api/system.byte "byte"
[int]: https://docs.microsoft.com/en-us/dotnet/api/system.int32 "int"
[void]: https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/void "void"
[string]: https://docs.microsoft.com/en-us/dotnet/api/system.string "string"
[URL]: https://nodejs.org/api/url.html "URL"
[Regex]: https://docs.microsoft.com/en-us/dotnet/api/system.text.regularexpressions.regex "Regex"

[Action]: https://docs.microsoft.com/en-us/dotnet/api/system.action-1 "Action"
[Func]: https://docs.microsoft.com/en-us/dotnet/api/system.func-2 "Func"
[IEnumerable]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.ienumerable "IEnumerable"
[IDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.idictionary "IDictionary"
[Task]: https://docs.microsoft.com/en-us/dotnet/api/system.threading.tasks.task?view=net-5.0 "Task"
[IReadOnlyDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.generic.ireadonlydictionary-2 "IReadOnlyDictionary"
[JsonElement]: https://docs.microsoft.com/en-us/dotnet/api/system.text.json.jsonelement "JsonElement"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
